# GameNative

./: .gitignore  CLAUDE.md  ROADMAP.md
app/: build.gradle.kts
app/schemas/app.gamenative.db.PluviaDatabase/: 14.json  16.json  22.json  23.json  24.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/extras/: gpu_image.c
app/src/main/cpp/pulsecapture/: CMakeLists.txt  pulse_capture.c  pulse_min.h
app/src/main/cpp/winlator/: vulkan_jni.cpp
app/src/main/java/app/gamenative/: MainActivity.kt  PluviaApp.kt  PrefManager.kt
app/src/main/java/app/gamenative/api/: PatchApi.kt
app/src/main/java/app/gamenative/data/: ConfigInfo.kt  DownloadInfo.kt  ItchioCredentials.kt  ItchioGame.kt  LibraryItem.kt  PatchData.kt  SteamApp.kt  SteamAppDepots.kt  SteamAppSummary.kt  SteamLicenseStub.kt
app/src/main/java/app/gamenative/enums/: Marker.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/resources/: kefirbb.xml
docs/: migrations.md
gradle/: libs.versions.toml
(+110 files in other folders)
